Fix buggy assert in CoreAudioSharedUnit::setupAudioUnit https://bugs.webkit.org/show_bug.cgi?id=234151

Reviewed by Eric Carlson.

Add the source as a client to the unit before reconfiguring the unit,
this makes the ASSERT(hasClients()) actually valid.
Manually tested.

* platform/mediastream/mac/CoreAudioCaptureSource.cpp:



Canonical link: https://commits.webkit.org/245188@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286965 268f45cc-cd09-0410-ab3c-d52691b4dbfc